# fast-time-server2

./: Cargo.toml  Justfile  Makefile
scripts/: test-call.sh  test-fast-time-curl.sh
src/: args.rs  args_get.rs  lib.rs  logger.rs  main.rs  main_init.rs  main_serve.rs  serve_http.rs  time_server.rs  transport.rs
