[package]
name = "fast-time-server"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
rmcp = { version = "1.5.0", features = ["transport-streamable-http-server"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
tokio = { version = "1.52.1", features = ["full"] }
tokio-util = "0.7.18"
axum = "0.8.9"
anyhow = "1.0.102"
